bp 2015/2/15
bugfix
bp 2015/2/14
  bug: bep_201502-02 - fixed 2015/2/15
  payslip incorrect, multiple issues:
  cannot print several wage types, cannot print several rates, deductions not correctly printed, currency and
  bank data not printed, no distinction between already paid and not yet paid.
  Retrieved missing data and amended the latex form.

bp 2015/2/14
bugfix
  bug: bep_201502-01 - fixed 2015/2/14
  cannot print invoices. Error message: Can't connect to data source '' because I can't work out what driver to use
  Programming error in IS.pm (line 238)- database connection failed

bp 2015/1/9
bugfix
  bug: bep_201501-10
  If a rate is entered in a deduction record the deduction amount is calculated by applying the rate to the wage.
  Using the “Based On” field we can calculate the amount with respect to another deduction. In this case
  only a rate can be entered. Additional error message specified

bp 2015/1/9
bugfix: bep_201501-09 git
  Employee pays, employer pays. The percentage values must add up to 100%. This is not checked.

bp 2015/1/9
bugfix bep_201501-08 git
  Employee pays, employer pays.
  Percentage values like 0.4 are required. This is confusing because in the rate column percent are
  entered like 30%. Change to percent input

bp 2015/1/9
bugfix: bep_201501-07 git
  Deduction screen: must enter rate or amount. Error message reads: Enter rate.
  change error message to read: enter rate or amount

# bp 2015.01.08
bugfix
bug: bep_201501-05 git
* bug caused by different screen field and database field names

# bp 2015.01.08 git
new feature/bugfix bep_201501-04 git
* entries in the "amount" column of the deduction record are no honored. It is now possible to calculate deductions
  not only in percentage terms but also as fixed amounts.

# bp 2015.01.08
bugfix
bug: bep_201501-06 git
* added call to parse_amount before rounding the amount

# bp 2015.01.07
  bug: bep_201501-03 fixed